# xcint

./: .clang-format  .gitignore  .gitmodules  .travis.yml  .zenodo.json  CMakeLists.txt  LICENSE  Makefile  README.md  TODO  conf.py  configure.py  index.rst  requirements.txt  setup  setup.py
api/: generate.py  xcint.F90  xcint.f90  xcint.h  xcint.py  xcint_c_api.cpp  xcint_c_api.h  xcint_fortran_api.F90
cboot/: .travis.yml  README.md  cboot.py
cmake/: ConfigExternal.cmake  ConfigTesting.cmake  FindAccelerate.cmake  FindOpenCL.cmake  autocmake.cfg  autocmake.yml
cmake/compilers/: CFlags.cmake  CXXFlags.cmake  GNU.CXX.cmake
cmake/custom/: api.cmake  autogenerated.cmake  balboa.cmake  cblas.cmake  custom.cmake  math_lang.cmake  numgrid.cmake  parameters.cmake  test.cmake  xcfun.cmake  xcint.cmake
cmake/math/: ConfigMath.cmake  MathLibs.cmake  MathLibsFunctions.cmake
cmake/modules/: autocmake_api.cmake  autocmake_custom.cmake  autocmake_test.cmake
doc/: api.rst  basis_functions.rst  building.rst  compilation.rst  conf.py  grid.rst  index.rst  interface.rst  interfaces.rst  interfacing.rst  libraries.rst  purpose.rst  requirements.rst  status.rst  xcfun.rst
interfaces/: generate.py  xcint_c_interface.cpp  xcint_c_interface.h  xcint_fortran_interface.F90
src/: AOBatch.cpp  AOBatch.h  Basis.cpp  Basis.h  CMakeLists.txt  Functional.cpp  Functional.h  Grid.cpp  XCint.cpp  XCint.h  ave_contributions.h  empty.cpp  generate.py  generate_ave_contributions.py  integrator.cpp  integrator.h  parameters.h.in  rolex.cpp  rolex.h  xcint_blas.cpp  xcint_blas.h  xcint_parameters.h
src/TODO/: xcint_fortran_api.F90
src/balboa/: .gitignore  .travis.yml  CMakeLists.txt  README.md  requirements.txt
src/balboa/balboa/: CMakeLists.txt  Main.cpp  Main.h  __init__.py  ao_vector.cpp  ao_vector.h  balboa.h  cs_trans.py  generate.py  parameters.h.in
src/balboa/cmake/: autocmake.yml
src/balboa/cmake/custom/: parameters.cmake  src.cmake  test.cmake
src/balboa/test/: coordinates.txt  result.txt  test.py
src/density/: AOBatch.cpp  AOBatch.h  Basis.cpp  Basis.h  CMakeLists.txt  ao_vector.cpp  ao_vector.h  blas_interface.cpp  blas_interface.h  compress.cpp  compress.h  cs_trans.py  density.cpp  density.h  generate.py  parameters.h.in  rTypeAOBatch.cpp  rTypeAOBatch.h  rTypeBasis.cpp  rTypeBasis.h
test/: .gitignore  CMakeLists.txt  README  bench_valinomycin.cpp  dmat.txt  energy.cpp  energy_b3lyp.cpp  energy_lda.cpp  energy_spherical.cpp  main.cpp  test.F90  test.f90  test.py
